# ecommerce-category-mapper

./: README.md  pyproject.toml
ecommerce_category_mapper/: __init__.py  __main__.py  mapper.py  models.py  schemas.py
examples/: simple_usage.py
