[project]
name = "ecommerce-category-mapper"
version = "0.1.0"
description = "Map ecommerce website categories using Oxylabs AI Studio tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "oxylabs-ai-studio>=0.2.13",
    "pydantic>=2.0.0",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
    "click>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ecommerce_category_mapper"]
